--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   nav a {
     text-decoration: none;
     color: var(--muted);
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     letter-spacing: 0.15em;
     text-transform: uppercase;
     transition: color 0.3s;
@@ -169,7 +169,7 @@
   }
 
   .hero-tag {
-    font-size: 0.65rem;
+    font-size: 0.8rem;
     letter-spacing: 0.2em;
     color: var(--teal);
     text-transform: uppercase;
@@ -203,7 +203,7 @@
   .hero-sub {
     margin-top: 2rem;
     max-width: 60ch;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     line-height: 1.9;
     color: var(--muted);
     opacity: 0;
@@ -224,7 +224,7 @@
     background: var(--teal);
     color: var(--ink);
     font-family: 'DM Mono', monospace;
-    font-size: 0.72rem;
+    font-size: 0.9rem;
     font-weight: 500;
     letter-spacing: 0.12em;
     text-transform: uppercase;
@@ -242,7 +242,7 @@
     background: transparent;
     color: var(--paper);
     font-family: 'DM Mono', monospace;
-    font-size: 0.72rem;
+    font-size: 0.9rem;
     font-weight: 400;
     letter-spacing: 0.12em;
     text-transform: uppercase;
@@ -295,7 +295,7 @@
     align-items: center;
     gap: 0.8rem;
     color: var(--muted);
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     letter-spacing: 0.15em;
     text-transform: uppercase;
     opacity: 0;
@@ -337,7 +337,7 @@
   }
 
   .section-tag {
-    font-size: 0.62rem;
+    font-size: 0.8rem;
     letter-spacing: 0.2em;
     color: var(--teal);
     text-transform: uppercase;
@@ -477,7 +477,7 @@
   }
 
   .concept-desc {
-    font-size: 0.72rem;
+    font-size: 0.8rem;
     line-height: 1.9;
     color: var(--muted);
   }
@@ -521,7 +521,7 @@
   .app-item:hover { background: rgba(45, 212, 191, 0.04); }
 
   .app-num {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     color: var(--teal);
     opacity: 0.6;
     letter-spacing: 0.15em;
@@ -534,7 +534,7 @@
   }
 
   .app-desc {
-    font-size: 0.68rem;
+    font-size: 0.8rem;
     color: var(--muted);
     max-width: 40ch;
     line-height: 1.8;
@@ -923,10 +923,11 @@
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2025 NetPsymetrics · Network Psychometrics Research Platform</p>
+  <p>Network Psychometrics</p>
   <div class="footer-links">
     <a href="#">Documentation</a>
-    <a href="#">GitHub</a>
+    <a href="https://github.com/AlexChristensen">GitHub</a>
+    <a href="https://scholar.google.com/citations?user=RbatznQAAAAJ&hl=en">Google Scholar</a>
     <a href="#">Publications</a>
     <a href="#">Privacy</a>
   </div>
