--- a/publications.html
+++ b/publications.html
@@ -109,14 +109,14 @@
 
     .pub-apa .title {
       color:      var(--paper);
-      font-style: italic;
+      font-style: normal;
     }
 
     .pub-apa .journal {
       font-family: 'Cormorant Garamond', serif;
       font-size:   1.0rem;
       color:       var(--teal);
-      font-style:  normal;
+      font-style:  italic;
     }
 
     /* ─── LINK PILLS ─── */
@@ -302,6 +302,24 @@
     <div class="pub-year-group reveal" data-year="2026">
       <div class="pub-year">2026</div>
 
+                 <div class="pub-item" data-type="preprint" data-topic="psychometric-networks">
+        <div class="pub-bar preprint"></div>
+        <div class="pub-content">
+          <div class="pub-badge preprint">Preprint</div>
+          <p class="pub-apa">
+            <span class="authors">Christensen, A. P., &amp; Choi, J.</span>
+            (2026).
+            <span class="title">Network accuracy across local, mesoscale, and global structures using Stochastic Block Models.</span>
+            <em>PsyArXiv.</em>
+            https://doi.org/placeholder
+          </p>
+          <div class="pub-links">
+            <a href="#" class="pub-link preprint-ln"><span class="pub-link-icon">↗</span> PsyArXiv</a>
+          </div>
+          <div class="pub-topics"><span class="pub-tag psychometric-networks">Psychometric Networks</span></div>
+        </div>
+      </div>
+
       <div class="pub-item" data-type="software" data-topic="psychometric-networks">
         <div class="pub-bar software"></div>
         <div class="pub-content">
@@ -478,7 +496,7 @@
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="psychometric-networks neuroscience">
+      <div class="pub-item" data-type="journal" data-topic="psychometric-networks">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -492,7 +510,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag psychometric-networks">Psychometric Networks</span><span class="pub-tag neuroscience">Neuroscience</span></div>
+          <div class="pub-topics"><span class="pub-tag psychometric-networks">Psychometric Networks</span></div>
         </div>
       </div>
 
@@ -544,13 +562,14 @@
             <span class="journal">Emotion</span>.
             https://doi.org/placeholder
           </p>
-          <div class="pub-links">
+                    <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
+          <div class="pub-topics"><span class="pub-tag psychometric-networks">Psychometric Networks</span></div>
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="semantic-networks neuroscience">
+      <div class="pub-item" data-type="journal" data-topic="semantic-networks">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -565,7 +584,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span><span class="pub-tag neuroscience">Neuroscience</span></div>
+          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span></div>
         </div>
       </div>
 
@@ -803,42 +822,6 @@
         <div class="pub-content">
           <div class="pub-badge preprint">Preprint</div>
           <p class="pub-apa">
-            <span class="authors">Christensen, A. P., Choi, J., &amp; Garrido, L. E.</span>
-            (2024).
-            <span class="title">Evaluating network replicability across local, mesoscale, and global structures.</span>
-            <em>PsyArXiv.</em>
-            https://doi.org/placeholder
-          </p>
-          <div class="pub-links">
-            <a href="#" class="pub-link preprint-ln"><span class="pub-link-icon">↗</span> PsyArXiv</a>
-          </div>
-          <div class="pub-topics"><span class="pub-tag psychometric-networks">Psychometric Networks</span></div>
-        </div>
-      </div>
-
-      <div class="pub-item" data-type="preprint" data-topic="psychometric-networks">
-        <div class="pub-bar preprint"></div>
-        <div class="pub-content">
-          <div class="pub-badge preprint">Preprint</div>
-          <p class="pub-apa">
-            <span class="authors">Heshmati, S., Rombaoa, J. P., Merritt, S., &amp; Christensen, A. P.</span>
-            (2024).
-            <span class="title">Well-being is a personalized experience: An intraindividual approach to dynamic well-being networks in daily life.</span>
-            <em>PsyArXiv.</em>
-            https://doi.org/placeholder
-          </p>
-          <div class="pub-links">
-            <a href="#" class="pub-link preprint-ln"><span class="pub-link-icon">↗</span> PsyArXiv</a>
-          </div>
-          <div class="pub-topics"><span class="pub-tag psychometric-networks">Psychometric Networks</span></div>
-        </div>
-      </div>
-
-      <div class="pub-item" data-type="preprint" data-topic="psychometric-networks">
-        <div class="pub-bar preprint"></div>
-        <div class="pub-content">
-          <div class="pub-badge preprint">Preprint</div>
-          <p class="pub-apa">
             <span class="authors">Christensen, A. P., &amp; Golino, H.</span>
             (2024).
             <span class="title">Exploratory Graph Model.</span>
@@ -948,7 +931,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag aesthetics">Aesthetics</span></div>
+          <div class="pub-topics"><span class="pub-tag aesthetics">Aesthetics</span><span class="pub-tag psychometric-networks">Psychometric Networks</span></div>
         </div>
       </div>
 
@@ -1119,7 +1102,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span></div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span><span class="pub-tag semantic-networks">Semantic Networks</span></div>
         </div>
       </div>
 
@@ -1142,7 +1125,7 @@
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="semantic-networks">
+      <div class="pub-item" data-type="journal">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -1157,7 +1140,6 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span></div>
         </div>
       </div>
 
@@ -1458,7 +1440,7 @@
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="creativity neuroscience">
+      <div class="pub-item" data-type="journal" data-topic="creativity">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -1473,7 +1455,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span><span class="pub-tag neuroscience">Neuroscience</span></div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span></div>
         </div>
       </div>
 
@@ -1572,7 +1554,7 @@
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="aesthetics creativity">
+      <div class="pub-item" data-type="journal" data-topic="creativity">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -1587,7 +1569,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag aesthetics">Aesthetics</span><span class="pub-tag creativity">Creativity</span></div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span></div>
         </div>
       </div>
 
@@ -1763,7 +1745,7 @@
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="semantic-networks creativity neuroscience">
+      <div class="pub-item" data-type="journal" data-topic="creativity neuroscience">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -1778,7 +1760,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span><span class="pub-tag creativity">Creativity</span><span class="pub-tag neuroscience">Neuroscience</span></div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span><span class="pub-tag neuroscience">Neuroscience</span></div>
         </div>
       </div>
 
@@ -1900,7 +1882,7 @@
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="aesthetics creativity">
+      <div class="pub-item" data-type="journal" data-topic="creativity">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -1915,7 +1897,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag aesthetics">Aesthetics</span><span class="pub-tag creativity">Creativity</span></div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span></div>
         </div>
       </div>
 
@@ -2011,6 +1993,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span></div>
         </div>
       </div>
 
@@ -2057,7 +2040,7 @@
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="personality psychometric-networks neuroscience">
+      <div class="pub-item" data-type="journal" data-topic="personality psychometric-networks">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -2072,7 +2055,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag personality">Personality</span><span class="pub-tag psychometric-networks">Psychometric Networks</span><span class="pub-tag neuroscience">Neuroscience</span></div>
+          <div class="pub-topics"><span class="pub-tag personality">Personality</span><span class="pub-tag psychometric-networks">Psychometric Networks</span></div>
         </div>
       </div>
 
@@ -2091,7 +2074,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag personality">Personality</span><span class="pub-tag creativity">Creativity</span><span class="pub-tag neuroscience">Neuroscience</span></div>
+          <div class="pub-topics"><span class="pub-tag personality">Personality</span><span class="pub-tag creativity">Creativity</span></div>
         </div>
       </div>
 
@@ -2110,11 +2093,11 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span><span class="pub-tag personality">Personality</span><span class="pub-tag creativity">Creativity</span></div>
+          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span><span class="pub-tag personality">Personality</span></div>
         </div>
       </div>
 
-      <div class="pub-item" data-type="journal" data-topic="personality creativity">
+      <div class="pub-item" data-type="journal" data-topic="creativity">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -2129,7 +2112,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag personality">Personality</span><span class="pub-tag creativity">Creativity</span></div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span></div>
         </div>
       </div>
 
@@ -2196,7 +2179,7 @@
     <div class="pub-year-group reveal" data-year="2017">
       <div class="pub-year">2017</div>
 
-      <div class="pub-item" data-type="journal" data-topic="semantic-networks creativity neuroscience">
+      <div class="pub-item" data-type="journal" data-topic="creativity neuroscience">
         <div class="pub-bar"></div>
         <div class="pub-content">
           <div class="pub-badge journal">Journal Article</div>
@@ -2211,7 +2194,7 @@
           <div class="pub-links">
             <a href="#" class="pub-link doi"><span class="pub-link-icon">↗</span> DOI</a>
           </div>
-          <div class="pub-topics"><span class="pub-tag semantic-networks">Semantic Networks</span><span class="pub-tag creativity">Creativity</span><span class="pub-tag neuroscience">Neuroscience</span></div>
+          <div class="pub-topics"><span class="pub-tag creativity">Creativity</span><span class="pub-tag neuroscience">Neuroscience</span></div>
         </div>
       </div>
 
@@ -2391,7 +2374,8 @@ const topicItems       = document.querySelectorAll('#topic-dropdown-menu .filter
 
 topicDropdownBtn.addEventListener('click', (e) => {
   e.stopPropagation();
-  topicDropdown.classList.toggle('open');
+  const isOpen = topicDropdown.classList.toggle('open');
+  if (isOpen) yearDropdown.classList.remove('open');
 });
 
 document.addEventListener('click', () => {
@@ -2436,7 +2420,8 @@ const yearItems       = document.querySelectorAll('#year-dropdown-menu .filter-d
 
 yearDropdownBtn.addEventListener('click', (e) => {
   e.stopPropagation();
-  yearDropdown.classList.toggle('open');
+  const isOpen = yearDropdown.classList.toggle('open');
+  if (isOpen) topicDropdown.classList.remove('open');
 });
 
 document.addEventListener('click', () => {
