--- a/index.html
+++ b/index.html
@@ -23,15 +23,11 @@
   ══════════════════════════════════════════ */
 
   /* ─── SMOOTH THEME TRANSITIONS ─── */
-  body, nav, footer, #about, #applications, #concepts, #quote, #cta,
-  .concept-card, input, textarea {
+  #about, #applications, #concepts, #quote, #cta, .concept-card {
     transition: background 0.4s ease, color 0.4s ease, border-color 0.4s ease;
   }
 
   /* ─── LIGHT MODE: INDEX-SPECIFIC SECTION OVERRIDES ─── */
-  /* These sections use hardcoded dark rgba values so need explicit light overrides */
-  :root.light #about        { background: rgba(225, 220, 210, 0.50); }
-  :root.light #applications { background: rgba(225, 220, 210, 0.35); }
   :root.light .concept-card       { background: var(--ink); }
   :root.light .concept-card:hover { background: #e0dbd0; }
 
@@ -62,22 +58,6 @@
     opacity: 0.5;
   }
 
-  h1 {
-    font-family: 'Cormorant Garamond', serif;
-    font-size: clamp(3.5rem, 8vw, 8rem);
-    font-weight: 300;
-    line-height: 0.95;
-    letter-spacing: -0.01em;
-    max-width: 18ch;
-    opacity: 0;
-    animation: fadeUp 0.9s 0.5s ease forwards;
-  }
-
-  h1 em {
-    font-style: italic;
-    color: var(--teal);
-  }
-
   .hero-sub {
     margin-top: 2rem;
     max-width: 60ch;
@@ -96,42 +76,6 @@
     opacity: 0;
     animation: fadeUp 0.9s 0.9s ease forwards;
   }
-
-  .btn-primary {
-    padding: 0.9rem 2.2rem;
-    background: var(--teal);
-    color: var(--ink);
-    font-family: 'DM Mono', monospace;
-    font-size: 0.9rem;
-    font-weight: 500;
-    letter-spacing: 0.12em;
-    text-transform: uppercase;
-    border: none;
-    cursor: pointer;
-    transition: background 0.3s, transform 0.2s;
-    text-decoration: none;
-    display: inline-block;
-  }
-
-  .btn-primary:hover { background: #5eead4; transform: translateY(-2px); }
-
-  .btn-ghost {
-    padding: 0.9rem 2.2rem;
-    background: transparent;
-    color: var(--paper);
-    font-family: 'DM Mono', monospace;
-    font-size: 0.9rem;
-    font-weight: 400;
-    letter-spacing: 0.12em;
-    text-transform: uppercase;
-    border: 1px solid rgba(244, 240, 232, 0.2);
-    cursor: pointer;
-    transition: border-color 0.3s, color 0.3s;
-    text-decoration: none;
-    display: inline-block;
-  }
-
-  .btn-ghost:hover { border-color: var(--paper); }
 
   .hero-metrics {
     position: absolute;
@@ -196,40 +140,6 @@
     height: 100%;
     background: var(--teal);
     animation: scanline 2s 2s infinite;
-  }
-
-  @keyframes scanline {
-    to { left: 200%; }
-  }
-
-  /* ─── SECTIONS (index-specific backgrounds) ─── */
-  section {
-    position: relative;
-    z-index:  1;
-  }
-
-  .section-inner {
-    max-width: 1200px;
-    margin:    0 auto;
-    padding:   8rem 3rem;
-  }
-
-  .section-tag {
-    font-size:      0.8rem;
-    letter-spacing: 0.2em;
-    color:          var(--teal);
-    text-transform: uppercase;
-    margin-bottom:  1rem;
-  }
-
-  .section-tag::before { content: '// '; opacity: 0.5; }
-
-  h2 {
-    font-family:   'Cormorant Garamond', serif;
-    font-size:     clamp(2.2rem, 4vw, 3.8rem);
-    font-weight:   300;
-    line-height:   1.1;
-    margin-bottom: 1.5rem;
   }
 
   /* ─── ABOUT ─── */
@@ -297,9 +207,6 @@
     opacity: 0.3;
     animation: pulse 3s ease-in-out infinite;
   }
-
-  @keyframes rotate { to { transform: rotate(360deg); } }
-  @keyframes pulse { 0%,100%{opacity:0.3;transform:scale(1)} 50%{opacity:0.6;transform:scale(1.2)} }
 
   /* ─── CONCEPTS ─── */
   #concepts { border-top: 1px solid var(--border); }
@@ -431,28 +338,6 @@
     text-align: center;
   }
 
-  blockquote {
-    font-family: 'Cormorant Garamond', serif;
-    font-size: clamp(1.6rem, 3vw, 2.6rem);
-    font-weight: 300;
-    font-style: italic;
-    line-height: 1.5;
-    color: var(--paper);
-    position: relative;
-  }
-
-  blockquote::before {
-    content: '"';
-    font-size: 8rem;
-    color: var(--teal);
-    opacity: 0.15;
-    position: absolute;
-    top: -2rem;
-    left: -2rem;
-    line-height: 1;
-    font-style: normal;
-  }
-
   .quote-source {
     margin-top: 2rem;
     font-size: 0.65rem;
@@ -498,104 +383,27 @@
     gap: 1rem;
   }
 
-  input, textarea {
-    background: transparent;
-    border: 1px solid var(--border);
-    padding: 0.9rem 1.2rem;
-    color: var(--paper);
-    font-family: 'DM Mono', monospace;
-    font-size: 0.72rem;
-    font-weight: 300;
-    outline: none;
-    transition: border-color 0.3s;
-    width: 100%;
+  /* ─── TABLET ─── */
+  @media (max-width: 1024px) {
+    .concepts-grid { grid-template-columns: repeat(2, 1fr); }
+    .hero-sub      { font-size: 1rem; }
+    .app-item      { grid-template-columns: 60px 1fr; }
+    .app-desc      { display: none; }
   }
 
-  input::placeholder, textarea::placeholder { color: var(--muted); opacity: 0.6; }
-  input:focus, textarea:focus { border-color: var(--teal); }
-
-  textarea { resize: none; height: 100px; }
-
-  /* ─── FOOTER ─── */
-  footer {
-    position: relative;
-    z-index: 1;
-    border-top: 1px solid var(--border);
-    padding: 2rem 3rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: rgba(7,10,16,0.8);
-  }
-
-  footer p {
-    font-size: 0.6rem;
-    color: var(--muted);
-    letter-spacing: 0.1em;
-  }
-
-  .footer-links {
-    display: flex;
-    gap: 2rem;
-  }
-
-  .footer-links a {
-    font-size: 0.6rem;
-    color: var(--muted);
-    text-decoration: none;
-    letter-spacing: 0.12em;
-    text-transform: uppercase;
-    transition: color 0.3s;
-  }
-
-  .footer-links a:hover { color: var(--teal); }
-
-  /* ─── ANIMATIONS ─── */
-  @keyframes fadeUp {
-    from { opacity: 0; transform: translateY(24px); }
-    to   { opacity: 1; transform: translateY(0); }
-  }
-
-  .reveal {
-    opacity: 0;
-    transform: translateY(30px);
-    transition: opacity 0.8s ease, transform 0.8s ease;
-  }
-
-  .reveal.visible {
-    opacity: 1;
-    transform: translateY(0);
-  }
-
-  /* ─── TOOLTIP EDGE ─── */
-  .edge-label {
-    position: fixed;
-    font-size: 0.58rem;
-    color: var(--teal);
-    letter-spacing: 0.1em;
-    pointer-events: none;
-    z-index: 999;
-    opacity: 0;
-    transition: opacity 0.3s;
-    background: rgba(7,10,16,0.85);
-    padding: 0.3rem 0.6rem;
-    border: 1px solid var(--border);
-    white-space: nowrap;
-  }
-
-  /* ─── RESPONSIVE ─── */
+  /* ─── MOBILE ─── */
   @media (max-width: 768px) {
-    nav { padding: 1rem 1.5rem; }
-    nav ul { display: none; }
-    .section-inner { padding: 5rem 1.5rem; }
-    .about-grid { grid-template-columns: 1fr; }
-    .about-visual { display: none; }
+    #hero          { padding: 0 1.5rem; padding-top: 6rem; min-height: 100svh; }
+    .hero-sub      { font-size: 0.95rem; }
+    .hero-actions  { flex-direction: column; align-items: flex-start; }
+    .about-grid    { grid-template-columns: 1fr; }
+    .about-visual  { display: none; }
     .concepts-grid { grid-template-columns: 1fr; }
-    .cta-inner { grid-template-columns: 1fr; gap: 3rem; }
-    .hero-metrics { display: none; }
-    .app-item { grid-template-columns: 60px 1fr; }
-    .app-desc { display: none; }
-    .form-row { grid-template-columns: 1fr; }
+    .cta-inner     { grid-template-columns: 1fr; gap: 3rem; }
+    .hero-metrics  { display: none; }
+    .app-item      { grid-template-columns: 60px 1fr; }
+    .app-desc      { display: none; }
+    .form-row      { grid-template-columns: 1fr; }
   }
 </style>
 </head>
@@ -607,12 +415,10 @@
 <nav>
   <a href="index.html" class="logo">Network<span>Psychometrics</span></a>
   <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#concepts">Concepts</a></li>
-    <li><a href="#applications">Applications</a></li>
+    <li><a href="team.html">Team</a></li>
     <li><a href="publications.html">Publications</a></li>
-    <li><a href="#cta" class="nav-cta">Get Started</a></li>
   </ul>
+  <button id="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
   <button id="theme-toggle" aria-label="Toggle light/dark mode">
     <span id="theme-icon">☀</span> <span id="theme-label">Light</span>
   </button>
@@ -627,8 +433,8 @@
     as complex and dynamic systems of interacting variables.
   </p>
   <div class="hero-actions">
-    <a href="publications.html" class="btn-primary">Explore Publications</a>
-    <!--- <a href="#cta" class="btn-ghost">Request Demo</a> --->
+    <a href="team.html" class="btn-ghost">Meet the Team</a>
+    <a href="publications.html" class="btn-ghost">Explore Publications</a>
   </div>
 
   <div class="scroll-hint">
@@ -922,9 +728,46 @@ ctx.fillStyle = n.color === TEAL ? `rgba(13,148,136,${alpha})`
   requestAnimationFrame(tick);
 }
 
+// ─── STATE SYNC ───
+const NP_STATE_KEY = 'npNetState';
+
+function saveState() {
+  try {
+    sessionStorage.setItem(NP_STATE_KEY, JSON.stringify(
+      nodes.map(n => ({ nx: n.x/W, ny: n.y/H, vx: n.vx, vy: n.vy,
+                        color: n.color, central: n.central, r: n.r, pulse: n.pulse }))
+    ));
+  } catch(e) {}
+}
+
+function tryLoadState() {
+  try {
+    const raw = sessionStorage.getItem(NP_STATE_KEY);
+    if (!raw) return false;
+    const saved = JSON.parse(raw);
+    if (!Array.isArray(saved) || !saved.length) return false;
+    nodes = saved.map(s => ({
+      x: s.nx * W, y: s.ny * H, vx: s.vx, vy: s.vy,
+      color: s.color, central: s.central, r: s.r, pulse: s.pulse
+    }));
+    edges = [];
+    for (let i = 0; i < nodes.length; i++)
+      for (let j = i + 1; j < nodes.length; j++) {
+        const d = dist(nodes[i], nodes[j]);
+        if (d < 500) edges.push({ a: i, b: j, w: (1 - d / 220) * 0.5 });
+      }
+    return true;
+  } catch(e) { return false; }
+}
+
 resize();
-initNodes();
-window.addEventListener('resize', () => { resize(); initNodes(); });
+if (!tryLoadState()) initNodes();
+window.addEventListener('resize', () => {
+  const oldW = W, oldH = H;
+  resize();
+  nodes.forEach(n => { n.x = n.x / oldW * W; n.y = n.y / oldH * H; });
+});
+window.addEventListener('pagehide', saveState);
 requestAnimationFrame(tick);
 
 // ─── MOUSE INFLUENCE ───
@@ -989,6 +832,24 @@ const io = new IntersectionObserver((entries) => {
 }, { threshold: 0.12 });
 
 reveals.forEach(el => io.observe(el));
+
+// ─── MOBILE NAV TOGGLE ───
+(function () {
+  var btn = document.getElementById('nav-toggle');
+  var nav = document.querySelector('nav');
+  btn.addEventListener('click', function () {
+    var open = nav.classList.toggle('nav-open');
+    btn.setAttribute('aria-expanded', open);
+    btn.textContent = open ? '\u2715' : '\u2630';
+  });
+  nav.querySelectorAll('ul a').forEach(function (a) {
+    a.addEventListener('click', function () {
+      nav.classList.remove('nav-open');
+      btn.setAttribute('aria-expanded', 'false');
+      btn.textContent = '\u2630';
+    });
+  });
+})();
 
 // ─── CONCEPT CARD STAGGER ───
 const cards = document.querySelectorAll('.concept-card');
